--- a/static/style/src/less/base.less
+++ b/static/style/src/less/base.less
@@ -660,9 +660,9 @@ div.form-row-error-message {
 }
 
 .form-row .help, .toolParamHelp {
-    color: #666;
+    color: #fff;
     a {
-        color: #666;
+        color: #fff;
     }
 }
 
@@ -1544,11 +1544,6 @@ div.toolTitleNoSection
 
 #content_table td{
     text-align:right;
-    white-space:nowrap;
-    padding:2px 10px;
-}
-
-#content_table th{
     white-space:nowrap;
     padding:2px 10px;
 }
